<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/greeting" />
    <Button
        android:id="@+id/count_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/count_button" />
    <TextView
        android:id="@+id/count_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/count_label" />
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/name_label" />
        <EditText
            android:id="@+id/name_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/name_label"
            android:layout_toLeftOf="@+id/set_button"
            android:hint="@string/name_hint" />
        <Button
            android:id="@id/set_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/set" />
    </RelativeLayout>
    <Button
        android:id="@+id/activity_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_button" />
    <Button
        android:id="@+id/frame_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frame_button" />
</LinearLayout>
